--- a/WebApplication/Views/Home/Detalis.cshtml
+++ b/WebApplication/Views/Home/Detalis.cshtml
@@ -10,20 +10,33 @@
 @model HomeDetalisViewModels;
 
 
-
-<h1> detailes view </h1>
-<!-- here u do not need to parse to the string because it is string-->
-<h2>@ViewData["PageTitle"]</h2>
-<h2>@ViewBag.PageTitleBag</h2>
-
-
-
 @{
     // view data it is the dynamically resolved at runtime
     // view data need to parse
     var employee = ViewData["Employee"] as WebApplication.Models.Employee;
     // view bad does not need parse
 }
+
+
+
+<h1> detailes view </h1>
+<!-- here u do not need to parse to the string because it is string
+<h2>@ViewData["PageTitle"]</h2>
+<h2>@ViewBag.PageTitleBag</h2>
+
+    -->
+
+<h6>name : @employee.Name</h6>
+<h6>name : @employee.Email</h6>
+<!--a unique hash value to img url-->
+<img src="~/images/avatar.png" asp-append-version="true" />
+
+<a asp-controller="Home" asp-action="Index" class="btn btn-primary">
+    Back
+</a>
+<a href="#" class="btn btn-primary">Edit</a>
+<a href="#" class="btn btn-danger">Delete</a>
+
 <!--
 <h6>name with view bag : @ViewBag.EmployeeBag.Name</h6>
 <h6>name with view bag : @ViewBag.EmployeeBag.Email</h6>
@@ -34,6 +47,8 @@
 
 
 <h6>name strongly typed view </h6>
-    -->
+
 
 <h6>name with view model : @Model.Employee.Name</h6>
+
+     -->
