--- a/WebApplication/Views/Home/Detalis.cshtml
+++ b/WebApplication/Views/Home/Detalis.cshtml
@@ -27,7 +27,7 @@
     -->
 
 <h6>name : @employee.Name</h6>
-<h6>name : @employee.Email</h6>
+<h6>email : @employee.Email</h6>
 <!--a unique hash value to img url-->
 <img src="~/images/avatar.png" asp-append-version="true" />
 
