--- a/WebApplication/Views/Home/Create.cshtml
+++ b/WebApplication/Views/Home/Create.cshtml
@@ -1,10 +1,13 @@
-﻿@model Employee
-@inject IEmployeeRepository _empRepository;
+﻿@model EmployeeCreateViewModel
+<!--
+    inject IEmployeeRepository _empRepository;
+-->
 
 @{
     ViewBag.Title = "Create Employee";
 }
-<form asp-controller="Home" asp-action="Create" method="post">
+
+<form enctype="multipart/form-data" asp-action="Create" method="post">
 
     <div class="form-group row">
         <label asp-for="Name" class="col-sm-2 col-form-label"></label>
@@ -28,17 +31,45 @@
 
     </div>
 
-    <div asp-validation-summary="All"></div>
-
-    <button class="bg-danger" type="submit">Create</button>
-
-
     <div class="form-group row">
-        <div class="col-sm-10 ">
-            Total Employees count = @_empRepository.GetEmployees().Count()
+        <label asp-for="Photo" class="col-sm-2 col-form-label"></label>
+        <div class="col-sm-10">
+            <div class="custom-file">
+                <input asp-for="Photo" class="from-control custom-file-input" />
+                <label class="custom-file-label">Chooser File...</label>
+            </div>
         </div>
 
     </div>
 
+    <div asp-validation-summary="All"></div>
 
+    <button class="bg-danger" type="submit">Create</button>
+
+    <!--
+
+
+
+        <div class="form-group row">
+            <div class="col-sm-10 ">
+                Total Employees count = _empRepository.GetEmployees().Count()
+            </div>
+
+        </div>
+    -->
+    <!--
+        to view the poto path in the lable after select, we need script code
+    -->
+    @section Scripts{
+
+        <script>
+            $(document).reay(funtion(){
+                $('.custom-file-input').on("change", funtion(){
+                    var fileName = $(this).val().split("\\").pop();
+                    $(this).next('.custom-file-label').html(fileName);
+                });
+            });
+        </script>
+
+    }
 </form>
