--- a/WebApplication/Views/Home/Detalis.cshtml
+++ b/WebApplication/Views/Home/Detalis.cshtml
@@ -15,6 +15,7 @@
     // view data need to parse
     var employee = ViewData["Employee"] as WebApplication.Models.Employee;
     // view bad does not need parse
+    var photoPath = "~/Images/" + Model.Employee.Photo ?? "noimage.jpg";
 }
 
 
@@ -29,7 +30,7 @@
 <h6>name : @employee.Name</h6>
 <h6>email : @employee.Email</h6>
 <!--a unique hash value to img url-->
-<img src="~/images/avatar.png" asp-append-version="true" />
+<img src="@photoPath" asp-append-version="true" />
 
 <a asp-controller="Home" asp-action="Index" class="btn btn-primary">
     Back
