--- a/WebApplication/Views/Home/Index.cshtml
+++ b/WebApplication/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 <div class="card-deck">
     @foreach (var Employee in Model)
     {
-        <div class="card m-3">
+        <div class="card m-3" style="min-width: 18rem ; max-width:30.5%; ">
             <div class="card-header">
                 <h3>@Employee.Name</h3>
                 <h3>@Employee.Id</h3>
@@ -32,7 +32,11 @@
 
                     <a href="/Home/Detalis/@Employee.Id" class="btn btn-primary">View</a>
                 -->
+                @{
+                    var photoPath = "~/Images/" + Employee.Photo ?? "noimage.jpg";
+                }
 
+                <img src="@photoPath" asp-append-version="true" />
                 <a href="#" class="btn btn-primary m-1">Edit</a>
                 <a href="#" class="btn btn-danger m-1">Delete</a>
             </div>
