--- a/WebApplication/Views/Home/Create.cshtml
+++ b/WebApplication/Views/Home/Create.cshtml
@@ -32,10 +32,11 @@
     </div>
 
     <div class="form-group row">
-        <label asp-for="Photo" class="col-sm-2 col-form-label"></label>
+        <label asp-for="Photos" class="col-sm-2 col-form-label"></label>
         <div class="col-sm-10">
             <div class="custom-file">
-                <input asp-for="Photo" class="from-control custom-file-input" />
+                <!-- add multiple to let user to select more than one photo -->
+                <input multiple asp-for="Photos" class="from-control custom-file-input" />
                 <label class="custom-file-label">Chooser File...</label>
             </div>
         </div>
@@ -64,11 +65,19 @@
 
         <script>
             $(document).reay(funtion(){
+
                 $('.custom-file-input').on("change", funtion(){
-                    var fileName = $(this).val().split("\\").pop();
-                    $(this).next('.custom-file-label').html(fileName);
-                });
-            });
+                    var fileLable = $(this).next('.custom-file-label');
+                    var files = $(this)[0].files;
+                    if(files.length > 1){
+                fileLable.html(files.length + 'files selected');
+            }else if (files.length == 1) {
+                fileLable.html(files[0].name)
+            }
+
+                                });
+
+                            });
         </script>
 
     }
