--- a/WebApplication/Views/Home/Detalis.cshtml
+++ b/WebApplication/Views/Home/Detalis.cshtml
@@ -37,7 +37,7 @@
     Back
 </a>
 
-<a asp-route="@Model.Employee.Id" asp-action="edit" asp-controller="home" class="btn btn-primary">Edit</a>
+<a asp-route-id="@Model.Employee.Id" asp-action="edit" asp-controller="home" class="btn btn-primary">Edit</a>
 
 <a href="#" class="btn btn-danger">Delete</a>
 
