--- a/WebApplication/Views/Shared/NotFound.cshtml
+++ b/WebApplication/Views/Shared/NotFound.cshtml
@@ -3,5 +3,7 @@
 }
 
 <h1>@ViewBag.ErrorMessage</h1>
+<h1>@ViewBag.Path</h1>
+<h1>@ViewBag.Qs</h1>
 
 <a asp-controller="home" asp-action="index"> Home Page</a>
