--- a/WebApplication/Views/Shared/_Layout.cshtml
+++ b/WebApplication/Views/Shared/_Layout.cshtml
@@ -36,6 +36,12 @@
                         <a asp-action="create" asp-controller="home" class="nav-link"> create</a>
                     </li>
                 </ul>
+
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a asp-action="register" asp-controller="Account" class="nav-link"> Register</a>
+                    </li>
+                </ul>
             </div>
         </nav>
 
