--- a/WebApplication/Views/Shared/_Layout.cshtml
+++ b/WebApplication/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@inject SignInManager<IdentityUser> signInManager;
+<!DOCTYPE html>
 
 <html>
 <head>
@@ -38,9 +39,30 @@
                 </ul>
 
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a asp-action="register" asp-controller="Account" class="nav-link"> Register</a>
-                    </li>
+                    <!--
+                        if the user login so show his email and button to logout
+                                        else show register or login
+                    -->
+                    @if (signInManager.IsSignedIn(User))
+                    {
+                        <li class="nav-item">
+                            <form method="post" asp-action="logout" asp-controller="account">
+                                <button type="submit" class="nav-link btn btn-link py-0" style="width:auto">
+                                    logout @User.Identity.Name
+                                </button>
+                            </form>
+                        </li>
+                    }
+                    else
+                    {
+                        <li class="nav-item">
+                            <a asp-action="register" asp-controller="Account" class="nav-link"> Register</a>
+                        </li>
+                        <li class="nav-item">
+                            <a asp-action="login" asp-controller="Account" class="nav-link"> Login</a>
+                        </li>
+                    }
+
                 </ul>
             </div>
         </nav>
