--- a/WebApplication/Views/_ViewImports.cshtml
+++ b/WebApplication/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using WebApplication.Models;
 @using WebApplication.ViewModels;
+@using Microsoft.AspNetCore.Identity;
 
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
